Resolves: tdf#86282 do not use file name as sheet name for linked documents

... and external references.

Change-Id: I6e23eeff39086091f13914a3f964aec1016a7de4